welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:6: error: not found: value estSurBaggle
		if (estSurBaggle()){
                    ^