welcome.lessons.welcome.loopdowhile.Poucet.scala.code
var compteur = 0
do { 
	if (!croisement()){
		avance();
		if (estSurBaggle()){
			compteur = compteur + 1
		}
	
	   else 
        if (compteur <= 2){
        	droite();        	
        }
        else gauche();
	}    
} while( !sortieTrouvee())
avance();
